--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,12 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
     plan: free
+    runtime: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python main.py"
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.12
+    autoDeploy: true
+
