--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python-telegram-bot==20.4
-Pillow==10.0.0
-pdf2image==1.17.0
-pytesseract==0.3.10
-tesseract
-poppler-utils
+python-telegram-bot==20.3
+pytesseract
+pdf2image
+Pillow
+aiohttp
