--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-python-telegram-bot==20.8
-pillow
-pytesseract
+python-telegram-bot[job-queue]==20.8
+pillow==11.3.0
+pytesseract==0.3.13
+httpx==0.26.0
