--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
-    name: comprovante-bot
-    env: python
-    buildCommand: ""
+    name: comprovante-guimicell-bot
+    runtime: python
+    buildCommand: pip install -r requirements.txt
     startCommand: ./start.sh
-    plan: free
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10
+        value: 3.10.12
