--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
     name: comprovante-guimicell-bot
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: ./start.sh
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "bash start.sh"
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.12
