--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    region: oregon
     buildCommand: "pip install -r requirements.txt"
     startCommand: "./start.sh"
     autoDeploy: true
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.12
