--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,9 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
+    plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "./start.sh"
-    autoDeploy: true
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.12
+      - key: PORT
+        value: 10000
