--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,9 @@
 services:
   - type: web
-    name: comprovantes
+    name: comprovante-guimicell-bot
     runtime: python
-    region: oregon
-    plan: free
-    branch: main
-    buildCommand: pip install -r requirements.txt
+    buildCommand: ""
     startCommand: python3 main.py
     envVars:
-      - key: PORT
-        value: 10000
+      - key: PYTHON_VERSION
+        value: 3.10.12
