--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
-  - type: worker
+  - type: web
     name: comprovante-guimicell-bot
     env: python
-    region: oregon
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python3 main.py
-    repo: https://github.com/ariaugustoo/comprovante-guimicell-bot
-    branch: main
