--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,9 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python3 main.py
+    plan: starter
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python3 main.py"
+    envVars:
+      - key: TOKEN
+        value: "8044957045:AAE8AmsmV3LYwqPUi6BXmp_I9ePgywg80IA"
