--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,13 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    plan: free
+    autoDeploy: true
     buildCommand: pip install -r requirements.txt
     startCommand: python3 main.py
     envVars:
-      - key: PORT
-        value: 10000
+      - key: TELEGRAM_TOKEN
+        value: 8044957045:AAE8AmsmV3LYwqPUi6BXmp_I9ePgywg8OIA
+      - key: GROUP_ID
+        value: "-1002626449000"
+      - key: PUBLIC_URL
+        value: https://comprovante-guimicell-bot-vmvr.onrender.com
