--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-python-telegram-bot[webhooks]==20.3
-Flask==2.2.5
-pillow
-pytesseract
-httpx~=0.24.0
+python-telegram-bot==13.15
+python-dotenv==1.0.0
+Flask==2.3.3
