--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,10 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    region: oregon
-    plan: free
     buildCommand: ""
     startCommand: python3 main.py
     envVars:
-      - key: PORT
-        value: 10000
+      - key: TELEGRAM_TOKEN
+        value: 8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+      - key: GROUP_ID
+        value: "-1003089523643"
