--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,13 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    buildCommand: ""
-    startCommand: python3 main.py
+    region: oregon
+    plan: free
+    runtime: python3
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python3 main.py"
     envVars:
-      - key: TELEGRAM_TOKEN
-        value: 8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+      - key: TOKEN
+        sync: false
       - key: GROUP_ID
-        value: "-1003089523643"
+        sync: false
