--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+TELEGRAM_TOKEN=8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
 GROUP_ID=-1003089523643
