--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,13 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
-    region: oregon
     plan: free
-    runtime: python3
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python3 main.py"
+    buildCommand: pip install -r requirements.txt
+    startCommand: python3 main.py
     envVars:
-      - key: TELEGRAM_TOKEN
+      - key: BOT_TOKEN
         sync: false
       - key: GROUP_ID
+        sync: false
+      - key: ADMIN_ID
         sync: false
