--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,14 @@
 services:
   - type: web
     name: comprovante-guimicell-bot
-    runtime: python
-    region: oregon
+    env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python3 main.py
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python3 main.py"
     envVars:
-      - key: BOT_TOKEN
-        value: 8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+      - key: TOKEN
+        sync: false
       - key: GROUP_ID
-        value: -1003089523643
+        sync: false
       - key: ADMIN_ID
-        value: 123456789  # Substitua pelo SEU Telegram ID de administrador
-    autoDeploy: true
+        sync: false
