--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python3 main.py"
     envVars:
-      - key: TOKEN
+      - key: TELEGRAM_TOKEN
         sync: false
       - key: GROUP_ID
         sync: false
