--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-python-telegram-bot==13.15
 Flask==2.1.3
+python-telegram-bot==13.15
 APScheduler==3.6.3
 python-dotenv==1.0.0
+Werkzeug==2.0.3
+cachetools==4.2.2
+certifi
+pytz>=2018.6
+tornado==6.1
