--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,15 @@ services:
   - type: web
     name: comprovante-guimicell-bot
     env: python
+    region: oregon
     plan: free
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: python3 main.py
     envVars:
-      - key: BOT_TOKEN
-        value: 8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+      - key: TELEGRAM_TOKEN
+        fromEnvVar: TELEGRAM_TOKEN
       - key: GROUP_ID
-        value: "-1003089523643"
+        fromEnvVar: GROUP_ID
       - key: ADMIN_ID
-        value: "5857469519"
-    autoDeploy: true
+        fromEnvVar: ADMIN_ID
+    healthCheckPath: /
