--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
+TELEGRAM_TOKEN=8293056690:AAEYab0kMkXvnCR8A3Su4bn4j3uV6WMmcrk
 GROUP_ID=-1003089523643
 ADMIN_ID=5857469519
