--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python3 main.py"
+    startCommand: "gunicorn main:app --bind 0.0.0.0:10000"
     envVars:
       - key: TELEGRAM_TOKEN
         sync: false
